[gd_scene load_steps=18 format=4 uid="uid://b13rn1xhny2vr"]

[ext_resource type="Script" path="res://Cenas/Objetos/gerenciador.gd" id="1_3kpqy"]
[ext_resource type="Texture2D" uid="uid://bxkhpcv0enhdq" path="res://Art/Background/Blue.png" id="2_y525a"]
[ext_resource type="Texture2D" uid="uid://dr7v7do6eyyqb" path="res://Art/Elementos/Terrain (16x16).png" id="3_h3fix"]
[ext_resource type="Texture2D" uid="uid://d4i73n346pr1t" path="res://Art/Elementos/snowy.png" id="4_hfodu"]
[ext_resource type="PackedScene" uid="uid://2p7bcq2bsgfi" path="res://Cenas/Objetos/jogador_principal.tscn" id="4_u881v"]
[ext_resource type="Texture2D" uid="uid://wkg8lvyf3wdc" path="res://Art/Background/winter-back/3 - Big_mountain_BG.png" id="6_4txy8"]
[ext_resource type="Texture2D" uid="uid://b02433ihwjlm0" path="res://Art/Background/winter-back/2 - Smaller_mountains.png" id="7_wcjpq"]
[ext_resource type="Texture2D" uid="uid://db6ke0sagqvff" path="res://Art/Background/winter-back/1 - Snowy_foreground_area.png" id="8_nu10v"]
[ext_resource type="Script" path="res://Cenas/Objetos/queda.gd" id="9_ce0as"]
[ext_resource type="Texture2D" uid="uid://b8qpw8pwh13jt" path="res://Art/Icones/love-always-wins (1).png" id="16_ck2vj"]
[ext_resource type="Script" path="res://Cenas/Level/pausa.gd" id="17_g37yj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cfo23"]
texture = ExtResource("3_h3fix")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.125, -8, -3)
17:1/0/physics_layer_0/polygon_0/one_way = true
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.125, -8, -3)
18:1/0/physics_layer_0/polygon_0/one_way = true
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.125, -8, -3)
19:1/0/physics_layer_0/polygon_0/one_way = true
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -2.25, -8, -2.125)
17:2/0/physics_layer_0/polygon_0/one_way = true
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -2.25, -8, -2.125)
18:2/0/physics_layer_0/polygon_0/one_way = true
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -2.25, -8, -2.125)
19:2/0/physics_layer_0/polygon_0/one_way = true
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pgos6"]
texture = ExtResource("4_hfodu")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_b1peg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cfo23")
sources/1 = SubResource("TileSetAtlasSource_pgos6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g3aol"]
texture = ExtResource("3_h3fix")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/next_alternative_id = 3
6:0/0 = 0
7:0/next_alternative_id = 4
7:0/0 = 0
8:0/next_alternative_id = 2
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/next_alternative_id = 3
6:1/0 = 0
7:1/next_alternative_id = 3
7:1/0 = 0
8:1/next_alternative_id = 2
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/next_alternative_id = 2
6:2/0 = 0
7:2/next_alternative_id = 2
7:2/0 = 0
8:2/next_alternative_id = 2
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
6:7/0 = 0
5:0/0 = 0
3:2/0 = 0
11:0/0 = 0
16:1/0 = 0

[sub_resource type="TileSet" id="TileSet_7cg7e"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_g3aol")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_x42rb"]
distance = 1.0

[node name="Node2" type="Node"]

[node name="Gerenciador" type="Node" parent="." node_paths=PackedStringArray("lifepoints")]
unique_name_in_owner = true
script = ExtResource("1_3kpqy")
lifepoints = [NodePath("../UI/lifepoints/HBoxContainer/TextureRect"), NodePath("../UI/lifepoints/HBoxContainer/TextureRect2"), NodePath("../UI/lifepoints/HBoxContainer/TextureRect3")]

[node name="Objetos das cenas" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Objetos das cenas"]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -931.0
offset_top = -982.0
offset_right = 2929.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y525a")
stretch_mode = 1

[node name="TileMap" type="TileMapLayer" parent="Objetos das cenas"]
tile_map_data = PackedByteArray("AAD1/yYAAQAEAAEAAAD2/yYAAQAEAAEAAAD3/yYAAQAEAAEAAAD4/yYAAQAEAAEAAAD5/yYAAQAEAAEAAAD6/yYAAQAEAAEAAAD7/yYAAQAEAAEAAAD8/yYAAQAEAAEAAAD9/yYAAQAEAAEAAAD+/yYAAQAEAAEAAAD//yYAAQAEAAEAAAAAACYAAQAEAAEAAAABACYAAQAEAAEAAAACACYAAQAEAAEAAAADACYAAQAEAAEAAAAEACYAAQAEAAEAAAAFACYAAQAEAAEAAAAGACYAAQAEAAEAAAAHACYAAQAEAAEAAAAIACYAAQAEAAEAAAAJACYAAQAEAAEAAAAKACYAAQAEAAEAAAALACYAAQAEAAEAAAAMACYAAQAEAAEAAAANACYAAQAEAAEAAAAOACYAAQAEAAEAAAAPACYAAQAEAAEAAAAQACYAAQAEAAEAAAARACYAAQAEAAEAAAASACYAAQAEAAEAAAATACYAAQAEAAEAAAAUACYAAQAEAAEAAAAVACYAAQAEAAEAAAAWACYAAQAEAAEAAAAXACYAAQAEAAEAAAAYACYAAQAEAAEAAAAZACYAAQAEAAEAAAAaACYAAQAEAAEAAAAbACYAAQAEAAEAAAAcACYAAQAEAAEAAAAdACYAAQAEAAEAAAAeACYAAQAEAAEAAAAfACYAAQAEAAEAAAAgACYAAQAEAAEAAAAhACYAAQAEAAEAAAAiACYAAQAEAAEAAAAjACYAAQAEAAEAAAAkACYAAQAEAAEAAAAlACYAAQAEAAEAAAAmACYAAQAEAAEAAAAnACYAAQAEAAEAAAAoACYAAQAEAAEAAAApACYAAQAEAAEAAAAqACYAAQAEAAEAAAArACYAAQAEAAEAAAAsACYAAQAEAAEAAAAtACYAAQAEAAEAAAAuACYAAQAEAAEAAAAvACYAAQAEAAEAAAAwACYAAQAEAAEAAAAxACYAAQAEAAEAAAAyACYAAQAEAAEAAAAzACYAAQAEAAEAAAA0ACYAAQAEAAEAAAA1ACYAAQAEAAEAAAA2ACYAAQAEAAEAAAAEAB0AAAARAAIAAAAFAB0AAAARAAIAAAAGAB0AAAARAAIAAAAHAB0AAAARAAIAAAAIAB0AAAARAAIAAAAJAB0AAAARAAIAAAAKAB0AAAARAAIAAAALAB0AAAARAAIAAAAMAB0AAAARAAIAAAANAB0AAAARAAIAAAA=")
tile_set = SubResource("TileSet_b1peg")

[node name="ground" type="TileMapLayer" parent="Objetos das cenas/TileMap"]
use_parent_material = true
tile_set = SubResource("TileSet_7cg7e")

[node name="CharacterBody2D" parent="Objetos das cenas" instance=ExtResource("4_u881v")]
position = Vector2(-156, 568)

[node name="Camera2D" type="Camera2D" parent="Objetos das cenas/CharacterBody2D"]
position = Vector2(1, 1)
position_smoothing_enabled = true
position_smoothing_speed = 9.0

[node name="grupo de coletaveis" type="Node" parent="Objetos das cenas"]

[node name="Inimigos" type="Node" parent="Objetos das cenas"]

[node name="Area2D" type="Area2D" parent="Objetos das cenas"]
position = Vector2(405, 711)
script = ExtResource("9_ce0as")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objetos das cenas/Area2D"]
position = Vector2(-92, 1)
shape = SubResource("WorldBoundaryShape2D_x42rb")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Objetos das cenas"]

[node name="sky" type="ParallaxLayer" parent="Objetos das cenas/ParallaxBackground"]
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objetos das cenas/ParallaxBackground/sky"]
position = Vector2(0, -180)
scale = Vector2(4, 4)
texture = ExtResource("6_4txy8")
centered = false

[node name="cloud" type="ParallaxLayer" parent="Objetos das cenas/ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objetos das cenas/ParallaxBackground/cloud"]
position = Vector2(0, -180)
scale = Vector2(4, 4)
centered = false

[node name="cloud-montain" type="ParallaxLayer" parent="Objetos das cenas/ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objetos das cenas/ParallaxBackground/cloud-montain"]
position = Vector2(0, -180)
scale = Vector2(4, 4)
centered = false

[node name="tree" type="ParallaxLayer" parent="Objetos das cenas/ParallaxBackground"]
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objetos das cenas/ParallaxBackground/tree"]
position = Vector2(0, -180)
scale = Vector2(4, 4)
texture = ExtResource("7_wcjpq")
centered = false

[node name="fg-tree" type="ParallaxLayer" parent="Objetos das cenas/ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Objetos das cenas/ParallaxBackground/fg-tree"]
position = Vector2(0, -180)
scale = Vector2(4, 4)
texture = ExtResource("8_nu10v")
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.04
anchor_right = 0.025
anchor_bottom = 0.04
offset_left = -7.8
offset_top = -4.92
offset_right = 233.2
offset_bottom = 68.08

[node name="Pontos" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Pontos : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lifepoints" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -212.0
offset_top = 23.0
offset_right = -14.0
offset_bottom = 92.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/lifepoints"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 204.0
offset_bottom = 56.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/lifepoints/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("16_ck2vj")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="UI/lifepoints/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("16_ck2vj")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="UI/lifepoints/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("16_ck2vj")
expand_mode = 2

[node name="Pausa" type="Node" parent="UI"]
script = ExtResource("17_g37yj")

[node name="PausePanel" type="Panel" parent="UI/Pausa"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Pausa/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -188.0
offset_right = 230.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "JOGO PAUSADO"
horizontal_alignment = 1

[node name="Continuar" type="Button" parent="UI/Pausa/PausePanel"]
process_mode = 3
layout_mode = 0
offset_left = 464.0
offset_top = 267.0
offset_right = 714.0
offset_bottom = 325.0
text = "CONTINUAR"

[node name="Voltar_para_o_menu" type="Button" parent="UI/Pausa/PausePanel"]
process_mode = 3
layout_mode = 0
offset_left = 468.0
offset_top = 372.0
offset_right = 713.0
offset_bottom = 436.0
text = "VOLTAR PARA O MENU INICIAL"

[connection signal="body_entered" from="Objetos das cenas/Area2D" to="Objetos das cenas/Area2D" method="_on_body_entered"]
[connection signal="pressed" from="UI/Pausa/PausePanel/Continuar" to="UI/Pausa" method="_on_continuar_pressed"]
[connection signal="pressed" from="UI/Pausa/PausePanel/Voltar_para_o_menu" to="UI/Pausa" method="_on_voltar_para_o_menu_pressed"]
